# finance-collector

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  architecture.md  docker-compose.yml  docker-run.sh  docker-stop.sh  main.py  pyproject.toml  requirements.txt  run_tests.py
.github/workflows/: deploy-to-cloud-run.yml
app/: auth.py  finance.py  models.py
docs/: github-actions-deployment.md
tests/: conftest.py  test_api.py  test_auth.py  test_finance.py  test_integration.py  test_models.py  test_ticker_date_api.py
tests/http/: finance.http
